Fixing spacing in about-onner

--- a/frontend/src/styles/cmps/_about-onerr.scss
+++ b/frontend/src/styles/cmps/_about-onerr.scss
@@ -1,9 +1,9 @@
 .about-onerr-container {
-    background-color: $about-color; 
+    background-color: $about-color;
     // background-color: lightcoral; // TODO: delete and change to about-color
     // height: em(705px);
     margin-bottom: em(96px);
-    height: em(705px);
+    height: em(798px);
 }
 
 .about-onerr-container {
@@ -12,29 +12,36 @@
 
 .text-video-container {
     height: em(706px);
-    padding: 96px 32px;
-  }
+    // padding: 96px 32px;
+}
 
 .text-container {
     // height: em(514px);
     // width: em(472px);
     width: 50%;
-    padding-right: em(138px);
-    // padding: 0 em(150px) 0 em(16px);
-    
-    h1 {
+    // padding-right: em(138px);
+    padding: 0 rem(150px) 0 rem(16px);
+
+    h2 {
         font-family: Macan-bold;
         font-size: em(32px);
         color: $text-third;
         padding-bottom: em(24px);
+        margin-top: 2em;
+        font-weight: bold;
     }
-    
-    svg, path {
+
+    svg,
+    path {
         fill: $text-secondary;
     }
-    
+
     span {
         padding-right: 8px;
+    }
+
+    li {
+        padding-bottom: em(24px);
     }
 
     h6 {
@@ -43,11 +50,15 @@
         line-height: 140%;
         color: $text-third;
         font-size: em(18px);
+        display: flex;
+        align-items: start;
 
     }
 
     p {
-        font-size: em(16px);
-        line-height: em(26px);
+        font-size: rem(18px);
+        line-height: rem(26px);
+        color: $text-primary;
+        font-weight: bold;
     }
 }
